2010-08-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45109
	* tree-ssa-structalias.c (get_constraint_for_component_ref):
	Explicitly strip handled components and indirect references.

2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/44942
	* config/sparc/sparc.c (function_arg_advance): Always take into account
	the padding, if any.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* expmed.c (expand_mult_const) <case alg_shift>: Expand shift into
	temporary. Emit move from temporary to accum, so REG_EQUAL note will
	be attached to this insn in correct mode.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_decompose_address): Check for SI_REG
	using REGNO of base_reg directly.

2010-08-03  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_emit_branch_hint): Do not access NOTE_KIND of
	non-NOTE insns.

2010-08-03  Uros Bizjak  <ubizjak@gmail.com>

	PR target/41089
	* config/alpha/alpha.c (alpha_build_builtin_va_list): Mark __offset
	as volatile.

2010-08-03  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/44914
	* tree-sra.c (cfg_changed): New variable.
	(sra_initialize): Initialize cgf_changed to false.
	(scan_function): Set cfg_changed if cfg was changed.
	(perform_intra_sra): Return also TODO_cleanup_cfg if cfg was changed.
	(ipa_early_sra): Likewise.

2010-08-02  DJ Delorie  <dj@redhat.com>

	* config/rx/predicates.md (rx_constshift_operand): New.
	* config/rx/rx.md (zs_cond): New.
	(cbranchsi4): Remove mode.
	(*cbranchsi4_<code>): Likewise.
	(*tstbranchsi4_<code>): New.
	(*tstbranchsi4r_<code>): New.